// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader centered renders correctly 1`] = `
<DocumentFragment>
  <header
    class="hero is-medium"
  >
    <div
      class="hero-body has-background-black"
    >
      <div
        class="container has-text-centered"
      >
        <h1
          class="title has-text-white is-1"
        >
          Starter
          <span
            class="pg-header-period"
          >
            .
          </span>
        </h1>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`PageHeader default renders correctly 1`] = `
<DocumentFragment>
  <header
    class="hero is-medium"
  >
    <div
      class="hero-body has-background-black"
    >
      <div
        class="container "
      >
        <h1
          class="title has-text-white is-1"
        >
          Starter
          <span
            class="pg-header-period"
          >
            .
          </span>
        </h1>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
